# DraconicEngine

./: .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md
cmake/: Compiler.cmake  Modules.cmake  compiler.cmake  modules.cmake
core/math/: math.cppm  vector4.cppm
engine/native/: CMakeLists.txt
engine/native/core/definitions/: definitions.cppm
platform/: simd.h
platform/cpu/: cpu_info_x64.cpp
